--- a/packages/editor/src/blocks/Subscribe.module.css
+++ b/packages/editor/src/blocks/Subscribe.module.css
@@ -35,6 +35,7 @@
   text-align: center;
   width: 100%;
   max-width: 400px;
+  resize: none;
 }
 
 .subheadline:focus {
